# Menu_Master

./: CMakeLists.txt  Makefile  lv_conf.h  main.c
code/include/: guest_my.h  include.h
code/src/: guest_my.c  ui_admin.c  ui_guest.c  ui_login.c
data/: dishes.txt
font/: gouwuche.c  gouwuche.h  lv_mysongti_font_20.c  lv_mysongti_font_20.h  lv_mysongti_font_30.c  lv_mysongti_font_30.h  lv_mysongti_font_40.c  lv_mysongti_font_40.h
lvgl/src/drivers/evdev/: lv_evdev.c
mysrc/: guest_my.c  ui_admin.c  ui_admin.h  ui_guest.c  ui_guest.h  ui_login.c  ui_login.h
